--- a/index.html
+++ b/index.html
@@ -3,35 +3,40 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>website</title>
+    <title>Horiseon Marketing Agency</title>
   </head>
 
   <body>
-    <div class="header">
-      <h1>Hori<span class="seo">seo</span>n</h1>
-      <div>
+
+    <header>
+      <h1>Hori<span>seo</span>n</h1>
+      <nav>
         <ul>
           <li>
             <a href="#search-engine-optimization">Search Engine Optimization</a>
           </li>
           <li>
             <a href="#online-reputation-management"
-              >Online Reputation Management</a
-            >
+            >Online Reputation Management</a>
           </li>
           <li>
             <a href="#social-media-marketing">Social Media Marketing</a>
           </li>
         </ul>
-      </div>
-    </div>
-    <div class="hero"></div>
-    <div class="content">
-      <div class="search-engine-optimization">
-        <img
-          src="./assets/images/search-engine-optimization.jpg"
-          class="float-left"
-        />
+      </nav>
+    </header>
+
+    <section>
+      <img src="./assets/images/digital-marketing-meeting.jpg" alt="Four professionals working around a desk inside of an office." id="hero"></img>
+    </section>
+
+    <main>
+      <section class="main-content">
+        <figure>
+          <img
+            src="./assets/images/search-engine-optimization.jpg" alt="An open notebook with a diagram of search engine optimization principles." 
+            class="float-left"/>
+        </figure>
         <h2>Search Engine Optimization</h2>
         <p>
           The dominance of mobile internet use means that users are searching
@@ -39,15 +44,14 @@
           home. Search Engine Optimization (SEO) allows you to increase your
           visibility and find the right customers for your business.
         </p>
-      </div>
-      <div
-        id="online-reputation-management"
-        class="online-reputation-management"
-      >
-        <img
-          src="./assets/images/online-reputation-management.jpg"
-          class="float-right"
-        />
+      </section>
+      <section class="main-content">
+        <figure>
+          <img
+            src="./assets/images/online-reputation-management.jpg" alt="A laptop with an increasing graph titled 'Reputation'."
+            class="float-right"
+          />
+        </figure>
         <h2>Online Reputation Management</h2>
         <p>
           The web is full of opinions, and some of these can be negative. Social
@@ -56,12 +60,14 @@
           control over what potential customers see when they search for your
           business.
         </p>
-      </div>
-      <div id="social-media-marketing" class="social-media-marketing">
-        <img
-          src="./assets/images/social-media-marketing.jpg"
-          class="float-left"
-        />
+      </section>
+      <section class="main-content">
+        <figure>
+          <img
+            src="./assets/images/social-media-marketing.jpg" alt="A desk with different social media icons like 'Tweet' and 'Share'."
+            class="float-left"
+          />
+        </figure>
         <h2>Social Media Marketing</h2>
         <p>
           Social media continues to have a sizable influence on buying habits.
@@ -69,37 +75,46 @@
           to your brand, using analytics to find the right markets and increase
           your lead generation.
         </p>
-      </div>
-    </div>
-    <div class="benefits">
-      <div class="benefit-lead">
+      </section>
+    </main>
+
+    <aside>
+      <section class="aside-content">
         <h3>Lead Generation</h3>
-        <img src="./assets/images/lead-generation.png" />
+        <figure>
+          <img src="./assets/images/lead-generation.png" alt="An icon of a gear being funneled down into a dollar sign icon." />
+        </figure>
         <p>
           Inbound strategies for lead generation require less work for your
           business, bringing customers directly to your website.
         </p>
-      </div>
-      <div class="benefit-brand">
+      </section>
+      <section class="aside-content">
         <h3>Brand Awareness</h3>
-        <img src="./assets/images/brand-awareness.png" />
+        <figure>
+          <img src="./assets/images/brand-awareness.png" alt="An icon with a lightbulb on top of a torso. Waves around the lightbulb indicate that it is on." />
+        </figure>
         <p>
           Users find your business through paid and organic searches, increasing
           the search ranking and visibility for your business.
         </p>
-      </div>
-      <div class="benefit-cost">
+      </section>
+      <section class="aside-content">
         <h3>Cost Management</h3>
-        <img src="./assets/images/cost-management.png" />
+        <figure>
+          <img src="./assets/images/cost-management.png" alt="An icon with a gear in the background while three dollar sign icons sit in front of it." />
+        </figure>
         <p>
           As the search ranking for your business increases, your advertising
           costs decrease, and you no longer need to advertise your page.
         </p>
-      </div>
-    </div>
-    <div class="footer">
+      </section>
+    </aside>
+
+    <footer class="footer">
       <h2>Made with ❤️️ by Horiseon</h2>
       <p>&copy; 2023 Horiseon Social Solution Services, Inc.</p>
-    </div>
+    </footer>
+
   </body>
 </html>
