added css comments, edited readme.md, and made nav links functionable

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </section>
 
     <main>
-      <section class="main-content">
+      <section class="main-content" id="search-engine-optimization">
         <figure>
           <img
             src="./assets/images/search-engine-optimization.jpg" alt="An open notebook with a diagram of search engine optimization principles." 
@@ -45,7 +45,7 @@
           visibility and find the right customers for your business.
         </p>
       </section>
-      <section class="main-content">
+      <section class="main-content" id="online-reputation-management">
         <figure>
           <img
             src="./assets/images/online-reputation-management.jpg" alt="A laptop with an increasing graph titled 'Reputation'."
@@ -61,7 +61,7 @@
           business.
         </p>
       </section>
-      <section class="main-content">
+      <section class="main-content" id="social-media-marketing">
         <figure>
           <img
             src="./assets/images/social-media-marketing.jpg" alt="A desk with different social media icons like 'Tweet' and 'Share'."
